# BigData

./: TD1.tgz  TD2.tgz  TDMPI2.tgz  TDOutOfCore.tgz
Devoir_Visualisation_2021/: projFindRangeMPI.cpp  proj_OutofCore.cpp  proj_RechercheOutofCore.cpp
Devoir_Visualisation_2022_Corbeau_Romain/: globals.h
TD1/: CMakeLists.txt  proj1.cpp
TD2/: CMakeLists.txt  proj1.cpp
TDMPI/: CMakeLists.txt  Rapport.odt  proj.cpp
TDOutOfCore/: CMakeLists.txt  proj.cpp
TMP/: outOfCore.cpp  outOfCoreMpi.cpp
TMP/Rapport/: Mystère 1 - outOfCore.cpp  Notes.txt
canevas_devoir/: proj.cpp
canevas_devoir/rapport/: Mystère 1 - Screen
canevavtkTD1/: README.txt  README_vitualbox.txt  vtkMyCallback.cpp  vtkMyCallback.h
